Estable hasta evaluación y calificación, perfiles de usuario

--- a/univ_config.json
+++ b/univ_config.json
@@ -8,5 +8,9 @@
         "main": "",
         "secondary": "",
         "third": ""
+    },
+    "grades": {
+        "scale": 100,
+        "approved": 80
     }
 }
