--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "mpdf/mpdf": "^8.0",
+        "simplesoftwareio/simple-qrcode": "^2.0",
         "spatie/laravel-permission": "^2.0"
     },
     "require-dev": {
