--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^1.0",
         "mpdf/mpdf": "^8.0",
         "simplesoftwareio/simple-qrcode": "^2.0",
-        "spatie/laravel-permission": "^2.0"
+        "spatie/laravel-permission": "^2.0",
+        "guzzlehttp/guzzle": "^6.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.4",
