Cambios Dirección-staff
1. Si el alumno hace más de un intento al resolver un examen se realiza un ajuste en los puntos obtenidos.
2. Se agregan Reviews
3. Cambio en el Menu: Premios->Tienda
4. Espera de la pantalla de terminación de examen de 5 a 10 segundos
5. Campo Mostrar contraseña en login
6. Se elimina RSS en footer
7. Configuración de porcentaje de puntos a obtener

--- a/univ_config.json
+++ b/univ_config.json
@@ -13,6 +13,7 @@
         "scale": 100,
         "approved": 80
     },
-    "lastSyncDateTime": "2021-08-16 15:23:51",
-    "automaticSchedule": false
+    "lastSyncDateTime": "2021-10-18 16:07:15",
+    "automaticSchedule": false,
+    "percPointsAfterFail": 90
 }
