--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "mpdf/mpdf": "^8.0",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "spatie/laravel-permission": "^2.0",
-        "guzzlehttp/guzzle": "^6.5"
+        "vonage/client": "^2.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.4",
