--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "7.5.1",
         "laravel/tinker": "^1.0",
         "mpdf/mpdf": "^8.0",
         "simplesoftwareio/simple-qrcode": "^2.0",
