--- a/univ_config.json
+++ b/univ_config.json
@@ -15,5 +15,6 @@
     },
     "lastSyncDateTime": "2022-06-27 12:11:39",
     "automaticSchedule": false,
-    "percPointsAfterFail": 90
+    "percPointsAfterFail": 90,
+    "lastAvatar": 46
 }
