--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,12 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.5",
+        "iio/libmergepdf": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/passport": "7.5.1",
         "laravel/tinker": "^1.0",
         "mpdf/mpdf": "^8.0",
-        "nesbot/carbon": "^2.59",
+        "nesbot/carbon": "2.59",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "spatie/laravel-permission": "^2.0"
     },
