--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "5.8.*",
         "laravel/passport": "7.5.1",
         "laravel/tinker": "^1.0",
+        "lcobucci/jwt": "3.3.3",
         "mpdf/mpdf": "^8.0",
         "nesbot/carbon": "2.59",
         "simplesoftwareio/simple-qrcode": "^2.0",
